[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["SiftingSands <user@server.fake>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
numpy = "^1.25.2"
opencv-python-headless = "4.7.0.72"
pandas = "2.0.1"
pillow = "10.0.0"
scipy = "1.11.1"
scikit-image = "0.20.0"
streamlit = "1.22.0"
torch = {version = "^2.0.1+cpu", source = "pytorch-cpu"}
torchvision = {version = "^0.15.2+cpu", source = "pytorch-cpu"}
mmengine = "0.8.2"
mmcv = {url = "https://download.openmmlab.com/mmcv/dist/cpu/torch2.0.0/mmcv-2.0.0-cp310-cp310-manylinux1_x86_64.whl"}
mmdet = "3.1.0"
mmocr = "1.0.1"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
